clusters/home/default/octoprint/99-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint-service
  namespace: default
  labels:
    app: octoprint
spec:
  selector:
    app: octoprint
  ports:
    - name: octoprint-http
      protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: octoprint-deployment
  namespace: default
  labels:
    app: octoprint
spec:
  serviceName: octoprint-service
  selector:
    matchLabels:
      app: octoprint
  template:
    metadata:
      labels:
        app: octoprint
    spec:
      # Set to the highest priority as the worst case would be to evict the node during a print job
      # It is more critical than cluster critical pods
      priorityClassName: system-node-critical
      containers:
      - name: octoprint
        image: octoprint/octoprint:1.10.0
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: octoprint-etc
          mountPath: /octoprint
        - name: usb
          mountPath: /dev/bus/usb
      volumes:
      - name: octoprint-etc
        hostPath:
          path: /etc/octoprint
      - name: usb
        hostPath:
          path: /dev/bus/usb

      nodeSelector:
        kubernetes.io/hostname: rpi-drucker
      tolerations:
      - operator: "Exists"
        effect: "NoSchedule"
      - operator: "Exists"
        effect: "PreferNoSchedule"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: octoprint.kokev.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint-service
                port:
                  number: 80

  tls:
    - hosts:
      - octoprint.kokev.de
      secretName: kokev-octoprint-tls
